<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.deansohn.activity_list_holidays.acivity_list_holidays">

    <TextView
        android:id="@+id/holidayName"
        android:layout_width="344dp"
        android:layout_height="wrap_content"
        android:text="@string/holiday_name"
        tools:layout_conversion_absoluteX="0dp"
        tools:layout_conversion_absoluteY="0dp"
        tools:layout_conversion_absoluteWidth="360dp"
        tools:layout_conversion_absoluteHeight="16dp"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="8dp" />

    <TextView
        android:id="@+id/romeNotes"
        android:layout_width="344dp"
        android:layout_height="wrap_content"
        android:text="@string/rome_notes"
        tools:layout_conversion_absoluteX="0dp"
        tools:layout_conversion_absoluteY="16dp"
        tools:layout_conversion_absoluteWidth="360dp"
        tools:layout_conversion_absoluteHeight="16dp"
        tools:layout_editor_absoluteY="16dp"
        tools:layout_editor_absoluteX="8dp" />


    <TextView
        android:id="@+id/startText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_text"
        tools:layout_conversion_absoluteX="0dp"
        tools:layout_conversion_absoluteY="49dp"
        tools:layout_conversion_absoluteWidth="66dp"
        tools:layout_conversion_absoluteHeight="16dp"
        tools:layout_editor_absoluteY="49dp"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/startDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_date"
        tools:layout_conversion_absoluteX="66dp"
        tools:layout_conversion_absoluteY="33dp"
        tools:layout_conversion_absoluteWidth="99dp"
        tools:layout_conversion_absoluteHeight="48dp"
        tools:layout_editor_absoluteY="33dp"
        tools:layout_editor_absoluteX="66dp" />

    <TextView
        android:id="@+id/endText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/end_text"
        tools:layout_conversion_absoluteX="166dp"
        tools:layout_conversion_absoluteY="49dp"
        tools:layout_conversion_absoluteWidth="60dp"
        tools:layout_conversion_absoluteHeight="16dp"
        tools:layout_editor_absoluteY="49dp"
        tools:layout_editor_absoluteX="166dp" />

    <Button
        android:id="@+id/endDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/end_date"
        tools:layout_conversion_absoluteX="226dp"
        tools:layout_conversion_absoluteY="33dp"
        tools:layout_conversion_absoluteWidth="99dp"
        tools:layout_conversion_absoluteHeight="48dp"
        tools:layout_editor_absoluteY="33dp"
        tools:layout_editor_absoluteX="226dp" />


    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="?android:attr/windowBackground" />

</android.support.constraint.ConstraintLayout>
